@@ -4,6 +4,12 @@ Changes in version 0.3
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 REMEMBER TO UPDATE -version-info BEFORE CUTTING A RELEASE!
 
+This release adds support for Lua 5.2 while maintaining support with
+Lua 5.1.  Applications using Lutok can be modified to use the new
+interface in this new version and thus support both Lua releases.
+However, because of incompatible changes to the Lua API, this release
+of Lutok is incompatible with previous releases as well.
+
 * New global constants: registry_index.
 
 * New methods added to the state class: get_global_table.
